# minhash

./: .gitignore  CMakeLists.txt  README.md  compile.sh  plot_fixed_query.py  plot_fixed_writes.py  plot_sketch_size.py  plot_test_prob.py  plot_test_wronly.py  plot_threshold.py  run_all_no_numa.sh  run_test_ops.sh  run_test_serial.sh  run_test_threshold.sh  run_test_threshold_numa.sh  run_tests_fixed_query.sh  run_tests_fixed_write.sh  run_tests_prob.sh  run_tests_prob_numa0.sh  run_tests_prob_sketch_size.sh  run_tests_sketch_size_numa.sh  run_tests_wronly.sh
include/: configuration.h  hash.h  linked_list.h  minhash.h  sketch_list.h  utils.h
src/: CMakeLists.txt
src/configuration/: configuration.c
src/datatypes/: linked_list.c  sketch_list.c
src/fcds/: minhash-fcds.c
src/parallel/: minhash-concurrent.c  minhash-fcds.c  minhash-parallel-lock.c
src/serial/: minhash-serial.c
src/utils/: hash.c  utils.c
test/: CMakeLists.txt  test_conc_minhash.c  test_fcds.c  test_only_writes.c  test_parallel_lock.c  test_serial.c  test_serial_similarity.c
test/fcds/: test_fcds_prob_ops.c  test_fixed_queries_infinite_write.c  test_fixed_writes_infinite_query.c  test_only_writes.c
test/parallel/: test_conc_minhash.c  test_conc_prob_ops.c  test_fixed_queries_infinite_write.c  test_fixed_writes_infinite_query.c  test_only_writes.c
